# qr-lib

./: .clangd  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  temp  todo
cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  debug.cpp  qr.h  qr_code_generator.cpp  qr_code_generator.h  qr_color_constants.h  qrlib.cpp
core/data_masking/: data_mask_resolver.cpp  data_mask_resolver.h  evaluators.cpp  evaluators.h
core/exceptions/: max_capacity_exceeded.h
core/include/: QrCode.h  qrlib.h
core/message_encoding/: codewords_assembly.h  data_analysis.h  data_encoding.cpp
core/message_encoding/error_correction/: ec_generation.h
core/module_placement/: qr_function_patterns.cpp  qr_function_patterns.h
core/struct/: MutableQrCode.cpp  MutableQrCode.h  QrCode.cpp
core/test/: assembly_tests.cpp  data_encoding_tests.cpp  data_masking_tests.cpp  ec_generation_tests.cpp  qr_matrix_evaluation_tests.cpp  test_utils.cpp  test_utils.h
gui/: CMakeLists.txt  main.cpp
src/: debug.h  main.cpp  qr.h  qr_code_generator.cpp  qr_code_generator.h  qr_color_constants.h  qr_function_patterns.cpp  qr_function_patterns.h  qrlib.cpp  qrlib.h
src/data_masking/: data_mask_resolver.cpp  data_mask_resolver.h  evaluators.cpp  qr_matrix_evaluator.cpp  qr_matrix_evaluator.h
src/exceptions/: max_capacity_exceeded.h
src/message_encoding/: codewords_assembly.cpp  data_encoding.cpp  data_encoding.h
src/message_encoding/error_correction/: alpha_notation_conversion.h  ec_generation.cpp  generator_polynomial.cpp  generator_polynomial.h  gf_polynomial.cpp
src/module_placement/: qr_function_patterns.cpp
src/steps/: codewords_assembly.cpp  codewords_assembly.h  data_analysis.cpp  data_analysis.h  data_encoding.cpp  data_encoding.h  parameters.h  qr.h
src/steps/error_correction/: alpha_notation_conversion.h  ec_generation.cpp  ec_generation.h  generator_polynomial.cpp  gf_polynomial.cpp  gf_polynomial.h
src/test/: data_encoding_tests.cpp  data_masking_tests.cpp
test/: assembly_tests.cpp  data_encoding_tests.cpp  data_masking_tests.cpp  ec_generation_tests.cpp  qr_matrix_evaluation_tests.cpp  test.cpp  test_utils.cpp  test_utils.h
